--- a/src/app/components/carlist/carlist.component.html
+++ b/src/app/components/carlist/carlist.component.html
@@ -1,1 +1,40 @@
-<p>carlist works!</p>
+<button (click) = "toggleShow()" class = "btn btn-primary">{{'Add a Car'}}</button>
+
+
+<div *ngIf = "isShown" class = "form">
+ <form class = "col-6">
+    
+     <div>
+        <label>Make</label>
+        <input type="text" name="make" placeholder="Enter Make" #make>
+   
+        <label>Model</label>
+        <input type="text" name="model" placeholder="Enter Model" #model>
+
+     </div>
+     <div>
+        <label>Year</label>
+        <input type="text" name="year" placeholder="Enter Year" #year>
+
+     </div>
+
+     <label>Image</label>
+     <input type="text" name="imageURL" placeholder="Enter imageURL" #imageURL>
+
+     <div class="btnDiv">
+        <button type="submit"(click)="addTheCar(make.value, model.value, year.value, imageURL.value)">Add the Car</button>
+
+     </div>
+
+     
+ </form>
+</div>
+
+<div class = "container">
+
+<app-car *ngFor="let car of carsData" [c]="carsData"></app-car>
+
+
+</div>
+
+
