Fixed Error, App now working

--- a/src/app/components/carlist/carlist.component.html
+++ b/src/app/components/carlist/carlist.component.html
@@ -31,10 +31,7 @@
 </div>
 
 <div class = "container">
-
-<app-car *ngFor="let car of carsData" [c]="carsData"></app-car>
-
-
+<app-car *ngFor="let carsData of carsData" [carsData]="carsData" ></app-car>
 </div>
 
 
