--- a/src/app/components/car/car.component.html
+++ b/src/app/components/car/car.component.html
@@ -1,22 +1,25 @@
 <div class = 'container'>
     <div class = "row border">
         <div class = "col-4">
-           <img src="{{c}}" [style.width.px]="carImageWidth">
+           <img src="{{carsData.imageURL}}" [style.width.px]="carImageWidth">
         </div>
         <div class = "col-3">
-            {{c}}
+            {{carsData.make}}
         </div>
         <div class = "col-3">
-            {{c}}
+            {{carsData.model}}
         </div>
         <div class = "col-3">
-            {{c}}
+            {{carsData.year}}
         </div>
+
+     
         
-        <button (click) = "deleteCar('ampTNM1zZLpP7BMLeaRj')">Delete</button>
+        <button (click)="deleteCar(carsData.id)">Delete</button>
         <button (click) = "toggleShow()" >Edit</button>
     </div>
 </div>
+
 
 <div *ngIf = "isShown" class = "editForm">
     <form class = "col-6">
@@ -39,8 +42,7 @@
         <input type="text" name="imageURL" placeholder="Enter imageURL" #imageURL>
    
         <div class="btnDiv">
-           <button type="submit"(click)="editCar('')">Edit the Car</button>
-   
+           <button type="submit"(click)="editCar(make.value, model.value, year.value, imageURL.value, carsData.id)" (click)="toggleShow()">Edit the Car</button>
         </div>
    
         
