--- a/src/app/components/carlist/carlist.component.html
+++ b/src/app/components/carlist/carlist.component.html
@@ -1,37 +1,68 @@
-<button (click) = "toggleShow()" class = "btn btn-primary">{{'Add a Car'}}</button>
 
 
-<div *ngIf = "isShown" class = "form">
- <form class = "col-6">
+<nav class="navbar navbar-light bg-light nav">
+   <div class="container">
+     <div class="navbar-brand">
+       <img src="../../assets/images/Car.png" alt="car" width="70" height="55">
+       <h3>CarDB</h3>
+     </div>
     
-     <div>
-        <label>Make</label>
-        <input type="text" name="make" placeholder="Enter Make" #make>
-   
-        <label>Model</label>
-        <input type="text" name="model" placeholder="Enter Model" #model>
+     <button (click) = "toggleShow()" class = "btn btn-primary">{{'Add a Car'}}</button>
 
+   </div>
+ </nav>
+
+ <div class="contain">
+
+
+
+
+<div *ngIf = "isShown" class = "form" >
+ <form class = "col-6">
+    <div class = "formContain">
+     <div class = "row">
+      <div class = "col-4 space">
+         <input type="text" name="make" placeholder="Enter Make" #make>
+      </div>
+      <div class = "col-4">
+         <input type="text" name="model" placeholder="Enter Model" #model>
+      </div>
      </div>
-     <div>
-        <label>Year</label>
-        <input type="text" name="year" placeholder="Enter Year" #year>
+     <div class = "row">
+      <div class = "col-4 space">
+         <input type="text" name="year" placeholder="Enter Year" #year>
+      </div>
+      <div class = "col-4">
+         <input type="text" name="price" placeholder="Enter Price" #price>
+      </div>
+     </div>
+     <div class = "row">
+        <div class = "col-4">
+         <input type="text" name="imageURL" placeholder="Enter imageURL" #imageURL>
+        </div>
+     </div>
+    
 
+     <div class="btnDiv" style="margin-top: 5%;">
+        <button type="submit"class = "btn btn-success" (click)="addTheCar(make.value, model.value, year.value, price.value ,imageURL.value)">Add the Car</button>
      </div>
 
-     <label>Image</label>
-     <input type="text" name="imageURL" placeholder="Enter imageURL" #imageURL>
-
-     <div class="btnDiv">
-        <button type="submit"(click)="addTheCar(make.value, model.value, year.value, imageURL.value)">Add the Car</button>
-
-     </div>
-
-     
+   </div>
  </form>
 </div>
-
-<div class = "container">
-<app-car *ngFor="let carsData of carsData" [carsData]="carsData" ></app-car>
 </div>
+
+<div >
+   <div class = "row cardContain">
+      <app-car *ngFor="let carsData of carsData" class = "col-4 carItem" [carsData]="carsData" >
+      
+      </app-car>
+   </div>
+</div>
+
+<footer>
+   <h5>&copy; CarDB .21</h5>
+</footer>
+
 
 
